<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/houseFragmentMenu">
        <item
            android:id="@+id/addHouseOptionMenu"
            android:icon="@drawable/plus"
            android:title="@string/add_house"
            app:showAsAction="ifRoom" />
    </group>

    <group android:id="@+id/selectLocationFragmentMenu">
...
