...
                    android:textColor="@color/colorGrey"
                    app:cornerRadius="0dp"
                    app:icon="@drawable/multiple_image" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/updateHouseBtn"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/updateImagesBtn"
                    android:layout_margin="12dp"
                    android:insetTop="0dp"
...
